--- a/publication/abdollahi-2018-uncovering/{slugify(entry['ID'])}.bib
+++ b/publication/abdollahi-2018-uncovering/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{abdollahi2018uncovering,
  author = {Abdollahi, Mahdi and Gao, Xiaoying and Mei, Yi and Ghosh, Shameek and Li, Jinyan},
- booktitle = {Australasian Joint Conference on Artificial Intelligence},
+ booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
  doi = {10.1007/978-3-030-03991-2_11},
- month = {dec},
  organization = {Springer},
  pages = {104--110},
  pdf = {papers/AI2018-Mahdi.pdf},
