--- a/publication/masood-2018-adaptive/{slugify(entry['ID'])}.bib
+++ b/publication/masood-2018-adaptive/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{masood2018adaptive,
  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Zhang, Mengjie},
- booktitle = {Australasian Joint Conference on Artificial Intelligence},
+ booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
  doi = {10.1007/978-3-030-03991-2_34},
- month = {dec},
  organization = {Springer},
  pages = {358--370},
  pdf = {papers/AI2018-Atiya.pdf},
