--- a/publication/karunakaran-2018-sampling/{slugify(entry['ID'])}.bib
+++ b/publication/karunakaran-2018-sampling/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{karunakaran2018sampling,
  author = {Karunakaran, Deepak and Mei, Yi and Chen, Gang and Zhang, Mengjie},
- booktitle = {International Conference on Parallel Problem Solving from Nature},
+ booktitle = {Proceedings of the International Conference on Parallel Problem Solving from Nature (PPSN)},
  doi = {10.1007/978-3-319-99259-4_28},
- month = {sep},
  organization = {Springer},
  pages = {347--359},
  pdf = {papers/PPSN18-Deepak.pdf},
