--- a/publication/park-2018-evolutionary/{slugify(entry['ID'])}.bib
+++ b/publication/park-2018-evolutionary/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{park2018evolutionary,
  author = {Park, John and Mei, Yi and Nguyen, Su and Chen, Gang and Zhang, Mengjie},
- booktitle = {Australasian Joint Conference on Artificial Intelligence},
+ booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
  doi = {10.1007/978-3-030-03991-2_66},
- month = {dec},
  organization = {Springer},
  pages = {739--751},
  pdf = {papers/AI2018-John.pdf},
