--- a/publication/tan-2018-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2018-genetic/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{tan2018genetic,
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
- booktitle = {Australasian Joint Conference on Artificial Intelligence},
+ booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
  doi = {10.1007/978-3-030-03991-2_15},
- month = {dec},
  organization = {Springer},
  pages = {146--152},
  pdf = {papers/AI2018-Boxiong.pdf},
