--- a/publication/zhang-2018-surrogate/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2018-surrogate/{slugify(entry['ID'])}.bib
@@ -1,8 +1,7 @@
 @inproceedings{zhang2018surrogate,
  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
- booktitle = {Australasian Joint Conference on Artificial Intelligence},
+ booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
  doi = {10.1007/978-3-030-03991-2_69},
- month = {dec},
  organization = {Springer},
  pages = {766--772},
  pdf = {papers/AI2018-Fang-Surrogate.pdf},
