--- a/publication/zhang-2019-new/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2019-new/{slugify(entry['ID'])}.bib
@@ -1,7 +1,7 @@
 @inproceedings{zhang2019new,
  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization (EvoCOP)},
- doi = {https://doi.org/10.1007/978-3-030-16711-0_3},
+ doi = {10.1007/978-3-030-16711-0_3},
  month = {apr},
  organization = {Springer},
  pages = {33--49},
