--- a/publication/wang-2019-novel/{slugify(entry['ID'])}.bib
+++ b/publication/wang-2019-novel/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{wang2019novel,
  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference (GECCO)},
- doi = {},
+ doi = {10.1145/3321707.3321797},
  month = {jul},
  organization = {IEEE},
- pages = {},
+ pages = {1093--1101},
  title = {Novel Ensemble Genetic Programming Hyper-Heuristics for Uncertain Capacitated Arc Routing Problem},
  year = {2019}
 }
