--- a/publication/tan-2019-hybrid/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2019-hybrid/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{tan2019hybrid,
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
- doi = {},
+ doi = {10.1109/CEC.2019.8790220},
  month = {jun},
  organization = {IEEE},
- pages = {},
+ pages = {2681--2688},
  title = {A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds},
  year = {2019}
 }
