--- a/publication/abdollahi-2019-stratifying/{slugify(entry['ID'])}.bib
+++ b/publication/abdollahi-2019-stratifying/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{abdollahi2019stratifying,
  author = {Abdollahi, Mahdi and Gao, Xiaoying and Mei, Yi and Ghosh, Shameek and Li, Jinyan},
  booktitle = {Proceedings of Pacific-Rim International Conference on Artificial Intelligence (PRICAI)},
- doi = {},
+ doi = {10.1007/978-3-030-29894-4_37},
  month = {aug},
  organization = {IEEE},
- pages = {},
+ pages = {457--473},
  title = {Stratifying risk of coronary artery disease using discriminative knowledge-guided medical concept pairings from clinical notes},
  year = {2019}
 }
