--- a/publication/maclachlan-2019-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/maclachlan-2019-genetic/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{maclachlan2019genetic,
  author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
- doi = {},
+ doi = {10.1162/evco_a_00267},
  journal = {Evolutionary Computation},
  month = {nov},
  publisher = {MIT Press},
