--- a/publication/wang-2019-two/{slugify(entry['ID'])}.bib
+++ b/publication/wang-2019-two/{slugify(entry['ID'])}.bib
@@ -1,5 +1,5 @@
 @inproceedings{wang2019two,
- author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
+ author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
  doi = {},
  month = {sep},
