--- a/publication/karunakaran-2019-multitasking/{slugify(entry['ID'])}.bib
+++ b/publication/karunakaran-2019-multitasking/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{karunakaran2019multitasking,
  author = {Karunakaran, Deepak and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
- doi = {},
- month = {sep},
+ doi = {10.1109/SSCI44817.2019.9002804},
+ month = {dec},
  organization = {IEEE},
- pages = {},
+ pages = {1598-1605},
  title = {Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows},
  year = {2019}
 }
