--- a/publication/costa-2020-cluster/{slugify(entry['ID'])}.bib
+++ b/publication/costa-2020-cluster/{slugify(entry['ID'])}.bib
@@ -1,5 +1,5 @@
 @inproceedings{costa2020cluster,
- author = {Costa, Joao Guilherme Cavalcanti Costa and Mei, Yi and Zhang, Mengjie},
+ author = {Costa, Joao Guilherme Cavalcanti and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
  doi = {},
  month = {mar},
