--- a/publication/zhang-2020-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-genetic/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{zhang2020genetic,
  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
- doi = {},
- month = {feb},
+ doi = {10.1007/978-3-030-43680-3_14},
+ month = {apr},
  organization = {Springer},
- pages = {},
+ pages = {214--230},
  title = {Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling},
  year = {2020}
 }
