--- a/publication/tan-2020-nsga/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2020-nsga/{slugify(entry['ID'])}.bib
@@ -2,9 +2,9 @@
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
  booktitle = {Proceedings of the CCGrid},
  doi = {},
- month = {feb},
+ month = {jun},
  organization = {IEEE},
- pages = {},
+ pages = {282--289},
  title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
  year = {2020}
 }
