--- a/publication/xu-2020-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/xu-2020-genetic/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{xu2020genetic,
  author = {Xu, Binzi and Mei, Yi and Wang, Yan and Ji, Zhicheng and Zhang, Mengjie},
- doi = {},
+ doi = {10.1162/evco_a_00273},
  journal = {Evolutionary Computation},
  month = {apr},
  publisher = {MIT Press},
