--- a/publication/da-2020-survey/{slugify(entry['ID'])}.bib
+++ b/publication/da-2020-survey/{slugify(entry['ID'])}.bib
@@ -2,9 +2,12 @@
  author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
  doi = {10.1109/TETCI.2020.2969213},
  journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
- month = {feb},
+ month = {jul},
+ number = {4},
+ pages = {538--554},
  publisher = {IEEE},
  title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
+ vol = {4},
  year = {2020}
 }
 
