--- a/publication/jia-2020-memetic/{slugify(entry['ID'])}.bib
+++ b/publication/jia-2020-memetic/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{jia2020memetic,
  author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference},
- doi = {},
- month = {mar},
+ doi = {10.1145/3377930.3389828},
+ month = {jul},
  organization = {ACM},
- pages = {},
+ pages = {1107--1115},
  title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
  year = {2020}
 }
