--- a/publication/zhang-2020-evolutionary/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-evolutionary/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{zhang2020evolutionary,
  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference Companion},
- doi = {},
- month = {mar},
+ doi = {10.1145/3377929.3389934},
+ month = {jul},
  organization = {ACM},
- pages = {},
+ pages = {107--108},
  title = {Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
  year = {2020}
 }
