--- a/publication/tan-2020-nsga/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2020-nsga/{slugify(entry['ID'])}.bib
@@ -1,8 +1,8 @@
 @inproceedings{tan2020nsga,
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
- booktitle = {Proceedings of the CCGrid},
- doi = {},
- month = {jun},
+ booktitle = {Proceedings of the IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID)},
+ doi = {10.1109/CCGrid49817.2020.00-65},
+ month = {jul},
  organization = {IEEE},
  pages = {282--289},
  title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
