--- a/publication/tan-2020-cooperative/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2020-cooperative/{slugify(entry['ID'])}.bib
@@ -1,4 +1,4 @@
-@article{tan2020survey,
+@article{tan2020cooperative,
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi and Zhang, Mengjie},
  doi = {},
  journal = {IEEE Transactions on Cloud Computing},
