--- a/publication/costa-2020-cluster/{slugify(entry['ID'])}.bib
+++ b/publication/costa-2020-cluster/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{costa2020cluster,
  author = {Costa, Joao Guilherme Cavalcanti and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185831},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem},
  year = {2020}
 }
