--- a/publication/gao-2020-memetic/{slugify(entry['ID'])}.bib
+++ b/publication/gao-2020-memetic/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{gao2020memetic,
  author = {Gao, Guanqiang and Mei, Yi and Xin, Bin and Jia, Ya-Hui and Browne, Will},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185647},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {A Memetic Algorithm for the Task Allocation Problem on Multi-robot Multi-point Dynamic Aggregation Missions},
  year = {2020}
 }
