--- a/publication/jackson-2020-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/jackson-2020-genetic/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{jackson2020genetic,
  author = {Jackson, Jericho and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185911},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {Genetic Programming Hyper-heuristic with Cluster Awareness for Stochastic Team Orienteering Problem with Time Windows},
  year = {2020}
 }
