--- a/publication/masood-2020-fitness/{slugify(entry['ID'])}.bib
+++ b/publication/masood-2020-fitness/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{masood2020fitness,
  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185881},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling},
  year = {2020}
 }
