--- a/publication/wang-2020-multi/{slugify(entry['ID'])}.bib
+++ b/publication/wang-2020-multi/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{wang2020multi,
  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185890},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems},
  year = {2020}
 }
