--- a/publication/ardeh-2020-genetic/{slugify(entry['ID'])}.bib
+++ b/publication/ardeh-2020-genetic/{slugify(entry['ID'])}.bib
@@ -1,10 +1,10 @@
 @inproceedings{ardeh2020genetic,
  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
- doi = {},
+ doi = {10.1109/CEC48606.2020.9185714},
  month = {mar},
  organization = {IEEE},
- pages = {},
+ pages = {1--8},
  title = {Genetic Programming Hyper-Heuristics with Probabilistic Prototype Tree Knowledge Transfer for Uncertain Capacitated Arc Routing Problems},
  year = {2020}
 }
