--- a/publication/tan-2020-cooperative/{slugify(entry['ID'])}.bib
+++ b/publication/tan-2020-cooperative/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{tan2020cooperative,
  author = {Tan, Boxiong and Ma, Hui and Mei, Yi and Zhang, Mengjie},
- doi = {},
+ doi = {10.1109/TCC.2020.3026338},
  journal = {IEEE Transactions on Cloud Computing},
  month = {aug},
  number = {},
