--- a/publication/zhang-2020-evolving/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-evolving/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2020evolving,
  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
- doi = {},
+ doi = {10.1109/TCYB.2020.3024849},
  journal = {IEEE Transactions on Cybernetics},
  month = {sep},
  number = {},
