--- a/publication/jia-2020-contribution/{slugify(entry['ID'])}.bib
+++ b/publication/jia-2020-contribution/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{jia2020contribution,
  author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
- doi = {},
+ doi = {10.1109/TCYB.2020.3025577},
  journal = {IEEE Transactions on Cybernetics},
  month = {sep},
  number = {},
