--- a/publication/zhang-2020-divide/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-divide/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2020divide,
  author = {Zhang, Yuzhou and Mei, Yi and Zhang, Buzhong and Jiang, Keqin},
- doi = {},
+ doi = {10.1016/j.ins.2020.11.011},
  journal = {Information Sciences},
  month = {nov},
  number = {},
