--- a/publication/ardeh-2020-diversity/{slugify(entry['ID'])}.bib
+++ b/publication/ardeh-2020-diversity/{slugify(entry['ID'])}.bib
@@ -1,7 +1,7 @@
 @inproceedings{ardeh2020diversity,
  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
- doi = {},
+ doi = {10.1109/SSCI47803.2020.9308501},
  month = {sep},
  organization = {IEEE},
  pages = {},
