--- a/publication/costa-2020-adaptive/{slugify(entry['ID'])}.bib
+++ b/publication/costa-2020-adaptive/{slugify(entry['ID'])}.bib
@@ -1,7 +1,7 @@
 @inproceedings{costa2020adaptive,
  author = {Costa, Joao and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
- doi = {},
+ doi = {10.1109/SSCI47803.2020.9308239},
  month = {sep},
  organization = {IEEE},
  pages = {},
