--- a/publication/gao-2020-adaptive/{slugify(entry['ID'])}.bib
+++ b/publication/gao-2020-adaptive/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{gao2020adaptive,
  author = {Gao, Guanqiang and Mei, Yi and Jia, Yahui and Browne, Will and Xin, Bin},
- doi = {},
+ doi = {10.1109/TCYB.2020.3042511},
  journal = {IEEE Transactions on Cybernetics},
  month = {dec},
  number = {},
