--- a/publication/wang-2020-towards/{slugify(entry['ID'])}.bib
+++ b/publication/wang-2020-towards/{slugify(entry['ID'])}.bib
@@ -1,7 +1,7 @@
 @inproceedings{wang2020towards,
  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
- doi = {},
+ doi = {10.1109/SSCI47803.2020.9308588},
  month = {sep},
  organization = {IEEE},
  pages = {},
