--- a/publication/zhang-2020-route/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-route/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2020route,
  author = {Zhang, Yuzhou and Mei, Yi and Huang, Shihua and Zheng, Xin and Zhang, Cuijuan},
- doi = {},
+ doi = {10.1109/TCYB.2020.3043265},
  journal = {IEEE Transactions on Cybernetics},
  month = {dec},
  number = {},
