--- a/publication/zhang-2021-collaborative/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2021-collaborative/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2021collaborative,
  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
- doi = {},
+ doi = {10.1109/TCYB.2021.3050141},
  journal = {IEEE Transactions on Cybernetics},
  month = {jan},
  number = {},
