--- a/publication/ardeh-2020-parametric/{slugify(entry['ID'])}.bib
+++ b/publication/ardeh-2020-parametric/{slugify(entry['ID'])}.bib
@@ -1,7 +1,7 @@
 @inproceedings{ardeh2020parametric,
  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
  booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AJCAI)},
- doi = {},
+ doi = {10.1007/978-3-030-64984-5_12},
  month = {sep},
  organization = {Springer},
  pages = {},
