--- a/publication/zhang-2020-surrogate/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-surrogate/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2020surrogate,
  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie and Tan, Kay Chen},
- doi = {},
+ doi = {10.1109/TEVC.2021.3065707},
  journal = {IEEE Transactions on Evolutionary Computation},
  month = {nov},
  number = {},
