--- a/publication/zhang-2021-multitask/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2021-multitask/{slugify(entry['ID'])}.bib
@@ -1,6 +1,6 @@
 @article{zhang2021multitask,
  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Tan, Kay Chen and Zhang, Mengjie},
- doi = {},
+ doi = {10.1109/TCYB.2021.3065340},
  journal = {IEEE Transactions on Cybernetics},
  month = {mar},
  number = {},
