--- a/publication/zhang-2021-multitask/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2021-multitask/{slugify(entry['ID'])}.bib
@@ -6,8 +6,7 @@
  number = {},
  pages = {},
  publisher = {IEEE},
- title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study
-in Dynamic Scheduling},
+ title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling},
  vol = {},
  year = {2021}
 }
