--- a/publication/zhang-2020-evolving/{slugify(entry['ID'])}.bib
+++ b/publication/zhang-2020-evolving/{slugify(entry['ID'])}.bib
@@ -2,12 +2,12 @@
  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
  doi = {10.1109/TCYB.2020.3024849},
  journal = {IEEE Transactions on Cybernetics},
- month = {sep},
- number = {},
- pages = {},
+ month = {apr},
+ number = {4},
+ pages = {1797--1811},
  publisher = {IEEE},
  title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
- vol = {},
- year = {2020}
+ vol = {51},
+ year = {2021}
 }
 
